# PolyPractice

OptMethods/: .gitignore  DiffEvolutionCP.tex  DiffEvoultionCP.tex  GeneticAlgCP.tex  kursach3.tex  latex_header.tex  literature.bib
OptMethods/round cutting task/: Encoder.cpp  Encoder.h  GenAlgorithm.cpp  Population.cpp  Population.h
OptMethods/train/: CMakeLists.txt  abstractsolutiongenerator.cpp  abstractsolutiongenerator.h  brake.cpp  brake.h  concretegenerator.cpp  concretegenerator.h  differentialevolution.cpp  differentialevolution.h  main.cpp  map_table.h  optcontrolproblem.cpp  optcontrolproblem.h  simulator.cpp  simulator.h  solution.cpp  solution.h  stretch.cpp  stretch.h  train.cpp  train.h
МО/: .gitignore  DiffEvoultionCP.tex  latex_header.tex  literature.bib
МО/train/: CMakeLists.txt  brake.cpp  brake.h  main.cpp  map_table.h  optcontrolproblem.cpp  optcontrolproblem.h  solution.cpp  solution.h  solutiongenerator.cpp  solutiongenerator.h  stretch.cpp  stretch.h  tools.h  train.cpp  train.h  train.pro  weather.h
Теорвер/: .gitignore  job1.tex  latex_header.tex  thruster.tex
